--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,10 @@ path = "src/lib.rs"
 name = "rush"
 path = "src/main.rs"
 
+[[bin]]
+name = "rushd"
+path = "src/bin/rushd.rs"
+
 [dependencies]
 # Parsing
 nom = "7"
@@ -26,7 +30,7 @@ crossterm = "0.27"
 
 # Execution
 tokio = { version = "1", features = ["full"] }
-nix = { version = "0.29", features = ["process", "signal"] }
+nix = { version = "0.29", features = ["process", "signal", "socket", "uio"] }
 os_pipe = "1.1"
 signal-hook = "0.3"
 
